Week_1/ws_industrias_robloxianas/log/build_2026-02-14_23-29-36/signal_processing/stderr.log
  File "/home/reiv/workspace/MR_week1/Challenge_1/install/signal_processing/lib/python3.10/site-packages/signal_processing/process.py", line 5
    class 
          ^
SyntaxError: invalid syntax

